# lz11

./: .gitignore  Cargo.toml  LICENSE-MIT.md  README.md
.github/workflows/: ci.yml
release/: Containerfile  build-linux-windows.sh  build-macos.sh
resources/: book2.lz10  book2.lz11
src/: decompress.rs  error.rs  format.rs  lib.rs
src/compress/: greedy_hash.rs  hash_matcher.rs  lazy_hash.rs  lz11.rs  mod.rs  naive.rs  optimal.rs
tests/: decompress.rs  round-trip.rs
