[package]
name = "lz11"
version = "0.1.0"
edition = "2024"
exclude = ["resources/"]

[features]
cli = ["clap"]

[dependencies]
byteorder = "1.5.0"
thiserror = "2.0.18"
clap = { version = "4.6.0", features = ["derive"], optional = true }

[dev-dependencies]
hex-literal = "1.1.0"
sha2 = "0.11.0"

[[bin]]
name = "lz11"
path = "src/bin/lz11.rs"
required-features = ["cli"]
